--- a/assets/css/msd.css
+++ b/assets/css/msd.css
@@ -47,6 +47,7 @@ footer {
 .msd-header {
     padding: 10px 16px;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     gap: var(--default-gap);
 }
